Name:                   roc-translator
Version:                0.0.1
Author:                 Jeremy<jpeterson@aacs-us.com>
Maintainer:             Jeremy<jpeterson@aacs-us.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Protocol.ROC
                        Protocol.ROC.OpCodes
                        Protocol.ROC.PointTypes
                        Protocol.ROC.Float
                        Protocol.ROC.Utils
                        Protocol.ROC.FullyDefinedPointType
                        Protocol.ROC.RocSerialize                       

  Other-Modules:        Protocol.ROC.Internal

  Build-Depends:        base >= 4 && < 5
                      , bimap
                      , binary
                      , bytes               >= 0.15.0.1
                      , bytestring          >= 0.10.4.0
                      , binary-conduit      >= 0.1.2.3
                      , conduit-combinators >= 0.3.0.6
                      , conduit-extra       >= 1.1.6.2
                      , containers
                      , crc-fast            == 0.1.0
                      , crc16-table         == 0.1
                      , crc16-calculator
                      , lens                >= 3.10
                      , roc-protocol-types  >= 0.0.2.0
                      , serialport          >= 0.4.7 && < 0.4.8
                      , transformers        >= 0.3.0.0 
                      , time                >= 1.4.0.1
                      , text

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , roc-translator
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
